ingress-controller/ingress-resource-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: kulikov
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
