ingress-controller/ingress-resource-webapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-server
  namespace: kulikov
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: web-server
          servicePort: 8085
